<resources>
    <string name="app_name">Thông tin bản thân</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Trần Minh Trực</string>
    <string name="day_of_birth">10/10/1994</string>
    <string name="address">Ký túc xá ĐHQG Khu B</string>
    <string name="email">truc.tm94@gmail.com</string>
    <string name="phone_number">01684046706</string>
    <string name="website">https://www.facebook.com/tructran.k7/</string>
    <string name="university">Trường đại học Công nghệ thông tin</string>
    <string name="major">Mạng máy tính và truyền thông</string>
    <string name="year">2012-2017</string>
    <string name="action_next">Next</string>
    <string name="action_ok">OK</string>
    <string name="action_prev">Prev</string>
</resources>